<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:background="@color/black">

    <!-- 顶部控制器 -->
    <LinearLayout
        android:id="@+id/top_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:scaleType="center"
                android:src="@drawable/baseline_back_arrow_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/video_title"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:text="@string/time_default"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/iv_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/baseline_battery_full_24"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_default"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/dp_16"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_lock_open_24"
        app:tint="@color/white" />
    <!-- 中间播放/暂停按钮 -->
    <LinearLayout
        android:id="@+id/center_controller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    </LinearLayout>
    <!-- 底部控制器 -->
    <LinearLayout
        android:id="@+id/bottom_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/transparent"
        android:orientation="vertical">

        <!-- 进度条 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_default"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />

                <SeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_weight="1"
                    android:background="@null"
                    android:maxHeight="@dimen/dp_4"
                    android:minHeight="@dimen/dp_4"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/seekbar_thumb"
                    android:thumbOffset="@dimen/dp_0" />

                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_default"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/dp_36"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_play_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/baseline_play_arrow_24"
                    app:tint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_fullscreen"
                    android:layout_toRightOf="@+id/btn_play_pause"
                    android:background="@color/transparent"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/tv_selections"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_12"
                        android:background="@color/transparent"
                        android:text="@string/select_episode"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                    <ImageView
                        android:id="@+id/btn_speed_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_12"
                        android:background="@color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/baseline_speed_24" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/btn_fullscreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/baseline_fullscreen_24"
                    app:tint="@color/white" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gesture_controller"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_120"
        android:layout_gravity="center"
        android:background="@color/black_alpha_60"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/dp_36"
            android:layout_height="@dimen/dp_36"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            tools:src="@drawable/baseline_volume_up_36" />

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            tools:text="100" />

        <ProgressBar
            android:id="@+id/pro_percent"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_3"
            android:progressDrawable="@android:drawable/progress_horizontal" />

    </LinearLayout>
</FrameLayout>
